--- a/footer.less
+++ b/footer.less
@@ -5,6 +5,14 @@
     margin-top: 0;
     margin-bottom: 0;
     padding-bottom: 0;
+    ul {
+        margin: 0;
+        padding: 0;
+        li {
+            margin: 0;
+            list-style: none;
+        }
+    }
     .region-footer {
         background-color: @darkGray2;
         position: relative;
