--- a/sidebar-links.less
+++ b/sidebar-links.less
@@ -1,40 +1,40 @@
-.sidebar-links,
-.sidebar-toc {
-    border-top: 3px solid #000;
-    margin-bottom: 35px;
-    padding: 15px 0;
-    ul {
-        margin: 0;
-        padding: 0;
-        li {
+.two-col-custom-left {
+    .sidebar-links, .sidebar-toc {
+        border-top: 3px solid #000;
+        margin-bottom: 35px;
+        padding: 15px 0;
+        ul {
             margin: 0;
-            list-style: none;
+            padding: 0;
+            li {
+                margin: 0;
+                list-style: none;
+            }
+        }
+        .pane-title {
+            font-size: 16px;
+            padding-bottom: 30px;
+            text-transform: uppercase;
+        }
+        .views-row {
+            padding-bottom: 15px;
         }
     }
-    .pane-title {
-        font-size: 16px;
-        padding-bottom: 30px;
-        text-transform: uppercase;
-    }
-    .views-row {
-        padding-bottom: 15px;
-    }
-}
-
-.sidebar-toc {
-    .field-content {
-        &:extend(.clearfix all);
-    }
-    .article-section-counter {
-        color: @red;
-        float: left;
-        display: block;
-        width: 8%;
-    }
-    a {
-        text-decoration: underline;
-        float: left;
-        display: block;
-        width: 91%;
+    .sidebar-toc {
+        .field-content {
+            &:extend(.clearfix all);
+        }
+        .article-section-counter {
+            color: @red;
+            float: left;
+            display: block;
+            width: 8%;
+        }
+        a {
+            text-decoration: underline;
+            float: left;
+            display: block;
+            width: 91%;
+        }
     }
 }
