--- a/header.less
+++ b/header.less
@@ -1,45 +1,76 @@
 .top-header {
-	margin-top: 0px;
-	margin-bottom: 37px;
-	.logo {
-		  margin: 0 auto;
-		  img {
-		  	  margin-top: 20px;
-		  }
-	}
-	.menu li {
-		display: inline-block;
-		border-top:3px solid transparent;
-		padding-top:15px;
-		margin-right: 20px;
-		&.first {
-			color: @black;
-			border-color:@black;
-		}
-		a {
-			text-decoration: none;
-			font-weight: bold;
-			color:@red;
-			&:hover {
-				text-decoration: none;
-				color:@black;
-			}
-		}
-	}
-	.top-search {
-		margin-top: 20px;
-		float: right;
-		width: 40%;
-		.input-group {
-
-			width: 100%;
-			input {
-				padding: 10px;
-				font-size: 10px;
-			}
-		}
-		.input-group-btn {
-			display: none;
-		}
-	}
+    ul {
+        padding: 0;
+        margin: 0;
+        li {
+            margin: 0;
+        }
+    }
+    margin-top: 0px;
+    margin-bottom: 37px;
+    .logo {
+        margin: 0 auto;
+        img {
+            margin-top: 20px;
+        }
+    }
+    .menu li {
+        display: inline-block;
+        padding-top: 15px;
+        margin-right: 20px;
+        a {
+            text-decoration: none;
+            font-weight: bold;
+            color: @red;
+            &:hover {
+                text-decoration: none;
+                color: @black;
+            }
+        }
+    }
+    // left side navigation links 
+    .navbar-nav .first {
+        color: @black;
+        border-top: 3px solid @black;
+    }
+    // logout 
+    .block-menu {
+        float: right;
+        li {
+            a {
+                border-left: 2px solid @red;
+                display: block;
+                background: url("images/icon-logout.png") no-repeat 20px 0px;
+                padding: 3px 0 11px 60px;
+                margin-left: 20px;
+                text-decoration: underline;
+            }
+        }
+    }
+    // search field 
+    .top-search {
+        margin-top: 15px;
+        float: right;
+        width: 45%;
+        .input-group {
+            width: 100%;
+            background-color: #FFF;
+            border: 1px solid @offWhite;
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+            input {
+                padding: 6px;
+                font-size: 16px;
+                border: 0;
+            }
+        }
+        .input-group-btn {
+            button {
+                border: 0;
+                background: transparent;
+                text-indent: -99999px;
+                background: url("images/icon-search.png") no-repeat 5px 5px;
+                padding: 5px 15px;
+            }
+        }
+    }
 }
