--- a/custom-top-wrapper.less
+++ b/custom-top-wrapper.less
@@ -32,7 +32,7 @@
             text-decoration: underline;
         }
     }
-    .pane-node-body p {
+    .pane-node-body, .pane-node-body p {
         font-size: 20px;
     }
 }
