--- a/login.less
+++ b/login.less
@@ -103,3 +103,9 @@ form .error input {
     font-size: 16px;
     margin: 0 0 50px 0;
 }
+
+.page-header {
+    padding-bottom: 15px;
+    margin: 0;
+    border-bottom: 0;
+}
