--- a/typography.less
+++ b/typography.less
@@ -139,39 +139,37 @@ mark,
 
 */
 
-
 body {
-  width: 100%;
-  overflow-x: hidden;
-}
-a {
-  color: @grey;
-  text-decoration: none;
-  &:hover {
-    color: @red;
-    text-decoration: underline;
-  }
+    width: 100%;
+    overflow-x: hidden;
 }
 
+a {
+    color: @grey;
+    text-decoration: none;
+    &:hover {
+        color: @red;
+        text-decoration: underline;
+    }
+}
 
 // Page header
 // -------------------------
+label {
+    position: absolute;
+    top: -999999em;
+    left: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
 
-.page-header {
-  padding-bottom: ((@line-height-computed / 2) - 1);
-  margin: 0;
-  border-bottom: 0;
+tr td {
+    padding: 7px;
 }
-label{
-  position: absolute;
-  top: -999999em;
-  left: auto;
-  width: 1px;
-  height: 1px;
-  overflow:hidden;
-}
-tr td{
-  padding: 7px;
+
+form .form-control {
+    border-radius: 0;
 }
 /*
 // Lists
