--- a/custom-top-wrapper.less
+++ b/custom-top-wrapper.less
@@ -28,11 +28,14 @@
         font-size: 40px;
         color: @white;
         text-decoration: none;
+    }
+    .pane-node-title a {
         &:hover {
             text-decoration: underline;
         }
     }
-    .pane-node-body, .pane-node-body p {
+    .pane-node-body,
+    .pane-node-body p {
         font-size: 20px;
     }
 }
