--- a/header.less
+++ b/header.less
@@ -32,6 +32,9 @@
     .navbar-nav .first {
         color: @black;
         border-top: 3px solid @black;
+        & a {
+            color: @black;
+        }
     }
     // logout 
     .block-menu {
