--- a/help-and-support.less
+++ b/help-and-support.less
@@ -7,41 +7,35 @@
         padding: 40px 105px 0 105px;
         margin: 30px 105px 50px 105px;
     }
-    .block {
-        margin-bottom: 30px;
+    .help-support-block {
+        margin-bottom: 25px;
     }
     .block-title {
         color: @grey;
         font-size: 40px;
-        padding-bottom: 10px;
+        margin-bottom: 25px;
     }
     p {
         font-size: 18px;
         color: @gray1;
-    }
+    } 
     .webform-component-textfield,
     .webform-component-email {
         width: 48%;
         margin-right: 4%;
         float: left;
-        padding-bottom: 20px;
+        margin-bottom: 25px;
     }
     .webform-component-email {
         margin-right: 0;
     }
     .webform-component-textarea {
-        padding-bottom: 30px;
+        margin-bottom: 25px;
     }
     input {
         width: 100%;
         font-size: 18px;
         padding: 15px 10px;
     }
-    .btn-primary {
-        padding: 15px 70px;
-        display: inline-block;
-        text-transform: uppercase;
-        text-decoration: none;
-        width: auto;
-    }
+
 }
