--- a/login.less
+++ b/login.less
@@ -4,14 +4,13 @@
 .page-user-password .main-container {
     margin-bottom: 50px;
     background-color: @offWhite;
-    padding: 50px 0;
+    padding: 50px 0 25px 0;
     position: relative;
 }
 
 .page-user-login .main-container h1,
 .page-user-password .main-container {
     text-align: center;
-    margin-bottom: 10px;
 }
 
 .page-user-login .main-container:before,
@@ -25,23 +24,6 @@
     height: 100%;
     position: absolute;
     z-index: -1;
-}
-
-.page-user-login .main-container .btn-primary,
-.page-user-password .main-container .btn-primary {
-    padding: 15px 70px;
-    display: inline-block;
-    margin-top: 20px;
-    text-transform: uppercase;
-    text-decoration: none;
-    width: auto;
-}
-
-.page-user-login .main-container .btn-primary:hover,
-.page-user-login .main-container .btn-primary:active,
-.page-user-password .main-container .btn-primary:hover,
-.page-user-password .main-container .btn-primary:active {
-    color: #FFF;
 }
 
 input.form-control {
@@ -58,9 +40,9 @@ input.form-control {
 
 .forgot-password-link {
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 25px;
     position: relative;
-    top: 10px;
+    top: -10px;
     text-decoration: underline;
 }
 
@@ -105,7 +87,7 @@ form .error input {
 }
 
 .page-header {
-    padding-bottom: 15px;
+    padding-bottom: 25px;
     margin: 0;
     border-bottom: 0;
 }
