--- a/style.less
+++ b/style.less
@@ -1,5 +1,5 @@
-@import "custom_bootstrap";
-@import 'typography';
+@import 'custom_bootstrap';
+@import 'reset-bootstrap';
 @import 'header';
 @import 'login';
 @import 'home';
