--- a/welcome.less
+++ b/welcome.less
@@ -1,40 +1,29 @@
-/* Welcome Page */
+// Welcome Page */
 .page-welcome {
-	.main-container{
-		text-align:center;
-		margin-bottom:50px;
-		background-color:@offWhite ;
-		padding:50px 0;
-		position:relative;
-	}
-	.main-container:before{
-		  content: "";
-	  display: block;
-	  background-color: @offWhite;
-	  top:0;
-	  left: -100%;
-	  right: -100%;
-	  height: 100%;
-	  position: absolute;
-	  z-index:-1;
-	}
-	.main-container .btn-primary {
-		padding: 15px 15px;
-		display:inline-block;
-		margin-top:20px;
-		text-transform:uppercase;
-		text-decoration:none;
-		width:250px;
-
-	}
-	.main-container .btn-primary:hover,
-	.main-container .btn-primary:active {
-		color:#FFF;
-
-	}
-	.welcome-intro-text {
-		line-height:1.5em;
-		font-size:16px;
-	}
-	
+    .main-container {
+        text-align: center;
+        margin-bottom: 50px;
+        background-color: @offWhite ;
+        padding: 50px 0 25px 0;
+        position: relative;
+    }
+    .main-container:before {
+        content: "";
+        display: block;
+        background-color: @offWhite;
+        top: 0;
+        left: -100%;
+        right: -100%;
+        height: 100%;
+        position: absolute;
+        z-index: -1;
+    }
+    .main-container .btn-primary {
+        width: 280px;
+    }
+    .welcome-intro-text {
+        line-height: 1.5em;
+        font-size: 16px;
+        margin-bottom: 25px;
+    }
 }
