--- a/welcome.less
+++ b/welcome.less
@@ -20,6 +20,8 @@
     }
     .main-container .btn-primary {
         width: 280px;
+        display: block;
+        margin: 0 auto 25px auto;
     }
     .welcome-intro-text {
         line-height: 1.5em;
