--- a/article-list.less
+++ b/article-list.less
@@ -16,7 +16,7 @@
             border-top: 0;
         }
         .article-parent-class {
-            padding: 40px 12px 30px 12px;
+            padding: 30px 10px 25px 10px;
         }
         a {
             display: block;
@@ -33,20 +33,20 @@
             display: block;
         }
         .article-title-class {
-            font-size: 36px;
+            font-size: 30px;
             padding-bottom: 15px;
             line-height: 1.2em;
         }
         .article-description-class p {
-            font-size: 18px;
+            font-size: 16px;
         }
         .article-date-class {
-            font-size: 18px;
+            font-size: 12px;
             color: @gray1;
             padding-bottom: 10px;
         }
         .article-file-class {
-            padding: 10px 0;
+            padding: 0 0 7px 0;
             a {
                 color: @red;
                 display: inline-block;
@@ -67,10 +67,15 @@
             border-top: 3px solid @black;
             padding: 25px 0px;
         }
+        .article-heading-wrapper h2 {
+            &:extend(.clearfix all);
+            padding-bottom: 10px;
+        }
         .section-number {
-            display: inline-block;
+            float: left;
+            width: 10%;
+            margin-right: 3%;
             padding: 15px 24px;
-            margin-right: 15px;
             text-align: center;
             color: @white;
             background: @black;
@@ -78,8 +83,17 @@
             -webkit-border-radius: 50%;
             border-radius: 50%;
         }
+        .section-title {
+            float: left;
+            width: 85%;
+            padding-top: 17px;
+        }
         .views-field-field-section-summary .field-content {
-            margin-left: 80px;
+            margin-left: 13%;
+            a {
+                display: inline;
+                text-decoration: underline;
+            }
         }
     }
     // combo article list  page 
@@ -100,10 +114,10 @@
             color: @red;
         }
         .article-title-class {
-            font-size: 36px;
+            font-size: 30px;
         }
         .article-description-class {
-            font-size: 18px;
+            font-size: 16px;
         }
     }
 }
