--- a/home.less
+++ b/home.less
@@ -41,7 +41,7 @@
     .pane-title {
         text-align: center;
         color: #c10b4c;
-        padding: 22px 0 32px 0;
+        padding: 40px 0;
     }
     .item-list-element {
         list-style: none;
@@ -61,7 +61,7 @@
             }
             .reference-article {
                 border-top: 3px solid #000;
-                padding: 40px 15px;
+                padding: 30px 10px;
             }
             span {
                 display: block;
@@ -76,7 +76,7 @@
                 padding-bottom: 20px;
             }
             .body {
-                font-size: 18px;
+                font-size: 16px;
             }
         }
     }
