--- a/login.less
+++ b/login.less
@@ -55,14 +55,18 @@ form .error input {
     font-size: 16px;
     padding-bottom: 15px;
     a {
-        color: @red;
+        color: @black;
+        text-decoration: underline;
+        &:hover{
+            text-decoration: none;
+        }
     }
     .close {
         display: none;
     }
     ul {
         padding: 0;
-        margin: 0 0 0 25px;
+        margin: 0;
         li {
             color: @red;
             list-style: none;
