--- a/custom-top-wrapper.less
+++ b/custom-top-wrapper.less
@@ -23,6 +23,9 @@
         color: @white;
         text-decoration: underline;
     }
+    .pane-node-title{
+        padding-bottom: 15px;
+    }
     .pane-node-title,
     .pane-node-title a {
         font-size: 40px;
