--- a/custom-top-wrapper.less
+++ b/custom-top-wrapper.less
@@ -39,6 +39,7 @@
     }
     .pane-node-body,
     .pane-node-body p {
-        font-size: 20px;
+        font-size: 19px;
+        font-weight: normal;
     }
 }
