--- a/footer.less
+++ b/footer.less
@@ -66,6 +66,10 @@
             }
         }
     }
+    .brand-footer {
+        &:extend(.clearfix all);
+        padding: 1px 0 14px 0; 
+    }
     .footer-bottom-company-name {
         float: left;
         font-size: 12px;
