--- a/home.less
+++ b/home.less
@@ -22,13 +22,16 @@
         .views-field-title {
             a {
                 color: @white;
-                font-size: @font-size-h3;
+                font-size: 20px;
                 margin-top: 20px;
                 display: block;
             }
         }
         .views-field-field-homepage-summary {
             padding: 20px;
+            .field-content{
+                font-size: 16px;
+            }
         }
     }
 }
