--- a/megamenu.less
+++ b/megamenu.less
@@ -25,8 +25,8 @@
 	background-color: @grey;
 }
 .tb-megamenu .nav > li > a {
-	font-weight: bold;
-	font-size: 21px;
+	font-weight: normal;
+	font-size: 20px;
 	color: #fff;
 	padding-bottom: 11px;
 	padding-top: 8px;
