--- a/reset-bootstrap.less
+++ b/reset-bootstrap.less
@@ -9,6 +9,7 @@ h2,
 h3,
 {
     margin: 0;
+    font-weight: normal;
 }
 
 a {
@@ -36,8 +37,9 @@ tr td {
 form .form-control {
     border-radius: 0;
 }
-.form-group{
-  margin-bottom: 25px;
+
+.form-group {
+    margin-bottom: 25px;
 }
 
 .btn-primary {
@@ -50,4 +52,8 @@ form .form-control {
     &:active {
         color: #FFF;
     }
+}
+
+.tb-megamenu i.icon-reorder {
+    background-position: -337px -49px;
 }
