updated  ul, ol

--- a/article-list.less
+++ b/article-list.less
@@ -118,6 +118,9 @@
     .view-combo-page-articles {
         .view-content {
             border-top: 3px solid @black;
+            ul, ol{
+                margin-bottom: 10px;
+            }
             & > ol {
                 margin: 0;
                 padding: 0;
