made iPad friendly

--- a/breadcrumb.less
+++ b/breadcrumb.less
@@ -18,3 +18,12 @@
         color: @gold;
     }
 }
+
+@media (max-width: 1200px) {
+    .breadcrumb {
+        &:before {
+            left: 0;
+            right: 0;
+        }
+    }
+}
