--- a/home.less
+++ b/home.less
@@ -29,7 +29,7 @@
         }
         .views-field-field-homepage-summary {
             padding: 20px;
-            .field-content{
+            .field-content {
                 font-size: 16px;
             }
         }
@@ -80,6 +80,17 @@
             }
             .body {
                 font-size: 16px;
+            }
+        }
+    }
+}
+
+@media (max-width: 1200px) {
+    .page-home {
+        .homepage-hero {
+            &:before {
+                left: 0;
+                right: 0;
             }
         }
     }
