--- a/welcome.less
+++ b/welcome.less
@@ -29,3 +29,12 @@
         margin-bottom: 25px;
     }
 }
+
+@media (max-width: 1200px) {
+    .page-welcome {
+        .main-container:before {
+            left: 0;
+            right: 0;
+        }
+    }
+}
