--- a/footer.less
+++ b/footer.less
@@ -1,5 +1,4 @@
-/* Footer */
-
+// Footer 
 .footer {
     padding-top: 0;
     margin-top: 0;
@@ -68,7 +67,7 @@
     }
     .brand-footer {
         &:extend(.clearfix all);
-        padding: 1px 0 14px 0; 
+        padding: 1px 0 14px 0;
     }
     .footer-bottom-company-name {
         float: left;
@@ -91,6 +90,27 @@
         &:last-child a {
             border-right: none;
             padding-right: 0;
+        }
+    }
+}
+
+@media (max-width: 1200px) {
+    .footer {
+        .region-footer {
+            .playbook-footer, .brand-footer{
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+            &:before {
+                left: 0;
+                right: 0;
+            }
+            #block-block-2 {
+                &:before {
+                    left: 0;
+                    right: 0;
+                }
+            }
         }
     }
 }
