--- a/header.less
+++ b/header.less
@@ -53,14 +53,14 @@
     .top-search {
         margin-top: 15px;
         float: right;
-        width: 48%;
+        width: 52%;
         .input-group {
             width: 100%;
             background-color: #FFF;
             border: 1px solid @offWhite;
             box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
             input {
-                padding: 6px;
+                padding: 6px 0 6px 6px;
                 font-size: 14px;
                 border: 0;
             }
@@ -72,6 +72,43 @@
                 text-indent: -99999px;
                 background: url("images/icon-search.png") no-repeat 5px 5px;
                 padding: 5px 15px;
+            }
+        }
+    }
+}
+
+@media (max-width: 769px) {
+    .top-header {
+        // logout 
+        .block-menu {
+            li {
+                a {
+                    border-left: 0;
+                }
+            }
+        }
+        // search field 
+        .top-search {
+            width: 80%;
+            .input-group {
+                width: 100%;
+                background-color: #FFF;
+                border: 1px solid @offWhite;
+                box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+                input {
+                    padding: 6px 0 6px 6px;
+                    font-size: 14px;
+                    border: 0;
+                }
+            }
+            .input-group-btn {
+                button {
+                    border: 0;
+                    background: transparent;
+                    text-indent: -99999px;
+                    background: url("images/icon-search.png") no-repeat 5px 5px;
+                    padding: 5px 15px;
+                }
             }
         }
     }
