--- a/help-and-support.less
+++ b/help-and-support.less
@@ -1,11 +1,16 @@
 /* Help and support */
 
 .node-type-webform {
+    .col-sm-8 {
+        margin: 0 auto;
+        float: none;
+    }
     .region-content {
         border-top: 3px solid @black;
         border-bottom: 3px solid @offWhite;
-        padding: 40px 105px 0 105px;
-        margin: 30px 105px 50px 105px;
+        margin: 50px auto;
+        padding-top: 50px;
+        float: none;
     }
     .help-support-block {
         margin-bottom: 25px;
@@ -18,7 +23,7 @@
     p {
         font-size: 18px;
         color: @gray1;
-    } 
+    }
     .webform-component-textfield,
     .webform-component-email {
         width: 48%;
@@ -37,5 +42,4 @@
         font-size: 18px;
         padding: 15px 10px;
     }
-
 }
