--- a/article-list.less
+++ b/article-list.less
@@ -53,10 +53,12 @@
             a {
                 color: @red;
                 display: inline-block;
-                background: url("images/icon-document.png") no-repeat 0px 5px;
-                padding: 3px 25px;
+                background: url("images/icons-sprite.png") no-repeat 0px -50px;
+                padding: 0px 25px;
                 &:hover {
+                    color: @black;
                     text-decoration: underline;
+                    background-position: 0px -75px
                 }
             }
         }
