--- a/custom-top-wrapper.less
+++ b/custom-top-wrapper.less
@@ -15,6 +15,10 @@
         position: absolute;
         z-index: -1;
     }
+    .two-col-custom-top{
+        margin: 0 auto;
+        float: none;
+    }
     .role-landing &,
     .role-landing &:before {
         background-color: @gold;
