--- a/header.less
+++ b/header.less
@@ -1,4 +1,6 @@
 .top-header {
+    margin-top: 0px;
+    margin-bottom: 37px;
     ul {
         padding: 0;
         margin: 0;
@@ -6,8 +8,6 @@
             margin: 0;
         }
     }
-    margin-top: 0px;
-    margin-bottom: 37px;
     .logo {
         margin: 0 auto;
         img {
@@ -43,9 +43,12 @@
             a {
                 border-left: 2px solid @red;
                 display: block;
-                background: url("images/icon-logout.png") no-repeat 20px 6px;
-                padding: 10px 0 9px 60px;
+                background: url("images/icons-sprite.png") no-repeat 15px -95px;
+                padding: 10px 0 9px 50px;
                 margin-left: 20px;
+                &:hover {
+                    background-position: 15px -145px
+                }
             }
         }
     }
@@ -70,46 +73,30 @@
                 border: 0;
                 background: transparent;
                 text-indent: -99999px;
-                background: url("images/icon-search.png") no-repeat 5px 5px;
+                background: url("images/icons-sprite.png") no-repeat 7px 7px;
                 padding: 5px 15px;
+                &:hover {
+                    background-position: 7px -18px;
+                }
             }
         }
     }
 }
 
-@media (max-width: 769px) {
+@media (max-width: 979px) {
     .top-header {
         // logout 
         .block-menu {
             li {
+                margin-right: 0px;
                 a {
-                    border-left: 0;
+                    text-indent: -99999px;
                 }
             }
         }
         // search field 
         .top-search {
-            width: 80%;
-            .input-group {
-                width: 100%;
-                background-color: #FFF;
-                border: 1px solid @offWhite;
-                box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-                input {
-                    padding: 6px 0 6px 6px;
-                    font-size: 14px;
-                    border: 0;
-                }
-            }
-            .input-group-btn {
-                button {
-                    border: 0;
-                    background: transparent;
-                    text-indent: -99999px;
-                    background: url("images/icon-search.png") no-repeat 5px 5px;
-                    padding: 5px 15px;
-                }
-            }
+            width: 65%;
         }
     }
 }
