--- a/style.less
+++ b/style.less
@@ -1,5 +1,6 @@
 @import 'custom_bootstrap';
 @import 'reset-bootstrap';
+@import 'typography';
 @import 'header';
 @import 'login';
 @import 'home';
