updated for fonts

--- a/less/article-list.less
+++ b/less/article-list.less
@@ -19,7 +19,28 @@
             border-top: 0;
         }
         .article-parent-class {
-            padding: 30px 10px 25px 10px;
+            padding: 30px 10px 22px 10px;
+        }
+        
+        span {
+            display: block;
+        }
+        .article-title-class {
+            font-size: 30px;
+            font-family: 'Helvetica Neue Medium', Helvetica, Arial, sans-serif;
+            padding-bottom: 15px;
+            line-height: 1.2em;
+        }
+        .article-description-class{
+            font-size: 16px;
+            p{
+                font-size: 16px;
+            }
+        }
+        .article-date-class {
+            font-size: 12px;
+            color: @gray1;
+            padding: 10px 0 5px 0;
         }
         .field-content > a {
             display: block;
@@ -31,22 +52,6 @@
                     color: #c10b4c;
                 }
             }
-        }
-        span {
-            display: block;
-        }
-        .article-title-class {
-            font-size: 30px;
-            padding-bottom: 15px;
-            line-height: 1.2em;
-        }
-        .article-description-class p {
-            font-size: 16px;
-        }
-        .article-date-class {
-            font-size: 12px;
-            color: @gray1;
-            padding-bottom: 10px;
         }
         .article-file-class {
             padding: 0 0 7px 0;
@@ -171,11 +176,14 @@
             }
         }
         .article-specification-class {
-            font-size: 20px;
+            font-size: 16px;
             color: @red;
+            font-weight: bold;
+            padding-bottom: 10px;
         }
         .article-title-class {
             font-size: 30px;
+            font-family: 'Helvetica Neue Medium', Helvetica, Arial, sans-serif;
         }
         .article-description-class {
             font-size: 16px;
