--- a/less/custom-top-wrapper.less
+++ b/less/custom-top-wrapper.less
@@ -3,7 +3,7 @@
     background-color: @red;
     color: @white;
     position: relative;
-    padding: 40px 0;
+    padding: 40px 0 30px 0;
     &:before {
         content: "";
         display: block;
@@ -33,6 +33,7 @@
     .pane-node-title,
     .pane-node-title a {
         font-size: 40px;
+        font-weight: bold;
         color: @white;
         text-decoration: none;
     }
@@ -43,8 +44,7 @@
     }
     .pane-node-body,
     .pane-node-body p {
-        font-size: 19px;
-        font-weight: normal;
+        font-size: 20px;
     }
 }
 
