--- a/less/login.less
+++ b/less/login.less
@@ -29,7 +29,6 @@
 input.form-control {
     height: auto;
     padding: 15px 10px;
-    font-size: 18px;
 }
 
 .page-user-login input,
@@ -44,15 +43,18 @@ input.form-control {
     position: relative;
     top: -10px;
     text-decoration: underline;
+    font-weight: bold;
+    font-size: 16px;
 }
 
 form .error input {
     border: 2px solid @red;
+    color: @red;
 }
 
 .alert-danger {
     color: @red;
-    font-size: 16px;
+    font-size: 18px;
     padding-bottom: 15px;
     a {
         color: @black;
