--- a/less/reset-bootstrap.less
+++ b/less/reset-bootstrap.less
@@ -10,6 +10,13 @@ h3,
 {
     margin: 0;
     font-weight: normal;
+    font-family: 'Helvetica Neue Medium', Helvetica, Arial, sans-serif;
+}
+h1{
+    font-size: 40px;
+}
+h2{
+    font-size: 30px;
 }
 
 a {
@@ -34,8 +41,10 @@ tr td {
     padding: 7px;
 }
 
-form .form-control {
+form .form-control, form input {
     border-radius: 0;
+    font-size: 20px;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .form-group {
@@ -48,6 +57,8 @@ form .form-control {
     margin-bottom: 25px;
     text-transform: uppercase;
     text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
     &:hover,
     &:active {
         color: #FFF;
