--- a/less/sidebar-links.less
+++ b/less/sidebar-links.less
@@ -13,11 +13,15 @@
         }
         .pane-title {
             font-size: 16px;
-            padding-bottom: 30px;
+            font-weight: bold;
+            padding-bottom: 40px;
             text-transform: uppercase;
         }
         .views-row {
             padding-bottom: 15px;
+        }
+        a{
+            font-size: 16px;
         }
     }
     .sidebar-toc {
