--- a/less/typography.less
+++ b/less/typography.less
@@ -20,10 +20,12 @@ html {
     -webkit-font-smoothing: antialiased;
 }
 
+/*
 .homepage-references .item-list-element li .title{
-  font-family: 'Helvetica Neue Medium', Helvetica, Arial, sans-serif
+  font-family: 'Helvetica Neue Medium', Helvetica, Arial, sans-serif;
 }
 
-.page-home .homepage-hero .views-field-title a{
-  font-weight: bold;
-}
+
+*/
+// font-family: 'Helvetica Neue Medium', Helvetica, Arial, sans-serif;
+// font-family: 'Helvetica Neue Medium', Helvetica, Arial, sans-serif;
