--- a/less/footer.less
+++ b/less/footer.less
@@ -29,17 +29,17 @@
             margin: 40px 0;
         }
         h2 {
-            font-size: @font-size-h4;
+            font-size: 20px;
             text-align: left;
             color: @white;
             margin-bottom: 20px;
-            font-weight: normal;
         }
         a {
             color: #fff;
             text-decoration: none;
             background: none;
             font-size: 12px;
+            font-weight: bold;
             display: inline-block;
             margin-bottom: 7px;
             &:hover {
