--- a/less/header.less
+++ b/less/header.less
@@ -20,8 +20,9 @@
         margin-right: 20px;
         a {
             text-decoration: none;
-            font-weight: bold;
+            font-family: "Helvetica Neue Medium", Helvetica, Arial, sans-serif;
             color: @red;
+            font-size: 16px;
             &:hover {
                 text-decoration: none;
                 color: @black;
