--- a/less/home.less
+++ b/less/home.less
@@ -1,10 +1,14 @@
 .page-home {
+    .homepage-hero-top {
+        margin: 0 auto;
+        float: none;
+    }
     .homepage-hero {
         text-align: center;
         background-color: @red;
         color: @white;
         position: relative;
-        padding: 35px 0;
+        padding: 40px 0 30px 0;
         &:before {
             content: "";
             display: block;
@@ -23,6 +27,7 @@
             a {
                 color: @white;
                 font-size: 20px;
+                font-weight: bold;
                 margin-top: 20px;
                 display: block;
             }
@@ -31,6 +36,7 @@
             padding: 20px;
             .field-content {
                 font-size: 16px;
+                font-family: 'Helvetica Neue Medium', Helvetica, Arial, sans-serif;
             }
         }
     }
@@ -53,15 +59,6 @@
         li {
             list-style: none;
             margin: 0;
-            a:hover {
-                text-decoration: none;
-                color: #333333;
-                background-color: #f4f2f0;
-                display: block;
-                .title {
-                    color: #c10b4c;
-                }
-            }
             .reference-article {
                 border-top: 3px solid #000;
                 padding: 30px 10px;
@@ -77,9 +74,19 @@
             .title {
                 font-size: 36px;
                 padding-bottom: 20px;
+                font-family: 'Helvetica Neue Medium', Helvetica, Arial, sans-serif;
             }
             .body {
                 font-size: 16px;
+            }
+            a:hover {
+                text-decoration: none;
+                color: #333333;
+                background-color: #f4f2f0;
+                display: block;
+                .title {
+                    color: #c10b4c;
+                }
             }
         }
     }
