--- a/less/megamenu.less
+++ b/less/megamenu.less
@@ -26,7 +26,7 @@
             border-left: 1px solid @gray1;
             border-top: none;
             & > a {
-                font-weight: normal;
+                font-weight: bold;
                 font-size: 20px;
                 color: #fff;
                 padding-bottom: 11px;
