--- a/less/help-and-support.less
+++ b/less/help-and-support.less
@@ -37,9 +37,11 @@
     .webform-component-textarea {
         margin-bottom: 25px;
     }
-    input {
+    input,
+    textarea {
         width: 100%;
         font-size: 18px;
         padding: 15px 10px;
+        background: @offWhite;
     }
 }
