--- a/less/megamenu.less
+++ b/less/megamenu.less
@@ -25,6 +25,7 @@
         & > li {
             border-left: 1px solid @gray1;
             border-top: none;
+            min-width: 240px;
             & > a {
                 font-weight: bold;
                 font-size: 20px;
