--- a/less/sidebar-links.less
+++ b/less/sidebar-links.less
@@ -30,15 +30,17 @@
         }
         .article-section-counter {
             color: @red;
+            font-size: 16px;
+            font-weight: bold;
             float: left;
             display: block;
-            width: 8%;
+            width: 9%;
         }
         a {
             text-decoration: underline;
             float: left;
             display: block;
-            width: 91%;
+            width: 90%;
         }
     }
 }
