--- a/less/article-list.less
+++ b/less/article-list.less
@@ -101,6 +101,7 @@
         }
         .views-field-field-section-summary .field-content {
             margin-left: 11%;
+            font-size: 16px;
             a {
                 display: inline;
                 text-decoration: underline;
